# Object-Tracking

./: Readme.md  inv-list.xml
OpenCV/: CMakeLists  Object-Tracking.cpp
PCL/: CMakeLists.txt  openni-tracking.cpp
src/: CMakeLists.txt  Scale.cpp  Scale.h  Trackable_Object.cpp  Trackable_Object.h  XML_Writer.cpp  XML_Writer.h  Zippo.cpp  Zippo.h  main.cpp
